* XmlDefs: Converted new Integer to Integer.valueOf